--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node, Blockchain",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon index.js",
     "test": "jest --watchAll"
   },
   "keywords": [
@@ -15,6 +16,10 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
-    "hex-to-binary": "^1.0.1"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "hex-to-binary": "^1.0.1",
+    "morgan": "^1.9.1"
   }
 }
