--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "hex-to-binary": "^1.0.1",
     "morgan": "^1.9.1",
+    "pubnub": "^4.21.6",
     "redis": "^2.8.0"
   }
 }
