--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1",
     "pubnub": "^4.21.6",
     "redis": "^2.8.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "uuid": "^3.3.2"
   }
 }
